fixed bug with arrow not showing in the right spot

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body
 .down-button
 {
   position: absolute;
-  bottom: 30px;
+  bottom: 3%;
   width: 100%;
   text-align: center;
 }
